--- a/assets/style.css
+++ b/assets/style.css
@@ -69,16 +69,22 @@
 #side-nav {
     position: absolute;
     width: 150px;
-    top: 50px;
-    left: -150px;
+    top: 20px;
+    left: -180px;
+    padding-bottom: 40px;
+    border-right: 5px solid #999;
 }
 #side-nav a {
     display: block;
-    margin: 10px 0 20px;
-    border: none;
+    padding: 10px 10px 10px 0;
     text-align: right;
     font-family: Vedana;
     font-size:18px;
+    border:none;
+    border-right: 3px solid #FFF;
+}
+#side-nav a:hover {
+    border-right: 3px solid #FD5A83;
 }
 #footer {
     text-align: center;
